tweaks to tinder page

--- a/tinder.html
+++ b/tinder.html
@@ -305,22 +305,13 @@
 
     <script>
         const profiles = [
-            {
-                name: 'Ángel',
-                age: 29,
-                location: 'Madrid · 3 km',
-                job: 'Diseñador UX en una app de tapas',
-                bio: 'Fan del reggaetón en acústico, coleccionista de chaquetas de cuero y experto improvisado en karaokes.',
-                passions: ['Motos vintage', 'Cocina fusión', 'DJ amateur', 'Gin-tonics con historia'],
-                anthem: 'La vida moderna - Residente',
-                image: './assets/angel.png'
-            },
+            
             {
                 name: 'Pau',
                 age: 28,
-                location: 'Barcelona · 5 km',
-                job: 'Ingeniera aeroespacial',
-                bio: 'Puedo construir drones, pero también una paella brutal. Me apunto a cualquier plan con playa o terrazas.',
+                location: 'Madrid · 5 km',
+                job: 'Especialista en marketing digital y chef amateur',
+                bio: 'Cocino paellas brutales. Me apunto a cualquier plan con playa o terrazas.',
                 passions: ['Triatlón', 'Fotografía analógica', 'Viajes improvisados', 'Aperitivos eternos'],
                 anthem: 'Tú me dejaste de querer - C. Tangana',
                 image: './assets/pau.png'
@@ -338,7 +329,7 @@
             {
                 name: 'Adrián',
                 age: 27,
-                location: 'Valencia · 6 km',
+                location: 'Madrid · 6 km',
                 job: 'Arquitecto de experiencias inmersivas',
                 bio: 'De día diseño espacios, de noche mezclo cócteles. Siempre tengo un plan cultural y uno clandestino.',
                 passions: ['Arte urbano', 'Realidad virtual', 'Rutas en moto', 'Cine de autor'],
@@ -348,7 +339,7 @@
             {
                 name: 'Pablo',
                 age: 31,
-                location: 'Sevilla · 2 km',
+                location: 'Madrid · 2 km',
                 job: 'Chef creativo y storyteller gastronómico',
                 bio: 'Si no estás bailando mientras cocino, algo estamos haciendo mal. Premio a la mejor tortilla en 2023 (según mi abuela).',
                 passions: ['Salsa', 'Mercados callejeros', 'Vinilos funk', 'Catas secretas'],
@@ -358,12 +349,22 @@
             {
                 name: 'Dani',
                 age: 29,
-                location: 'Bilbao · 4 km',
+                location: 'Madrid · 4 km',
                 job: 'Ingeniero de sonido en festivales',
                 bio: 'Tengo un don para conseguir backstage y hacerte fan de bandas que aún no existen. Sí, llevo tapones en el bolsillo.',
                 passions: ['Festivales', 'Rutas de pintxos', 'Escalada', 'Sintetizadores'],
                 anthem: 'Blinding Lights - The Weeknd',
                 image: './assets/dani.png'
+            },
+            {
+                name: 'Ángel',
+                age: 29,
+                location: 'Cambridge · 2790 km',
+                job: 'Desarrollador web y nómada digital',
+                bio: 'Fan del reggaetón en acústico, coleccionista de chaquetas de cuero y experto improvisado en karaokes.',
+                passions: ['Motos vintage', 'Cocina fusión', 'DJ amateur', 'Gin-tonics con historia'],
+                anthem: 'La vida moderna - Residente',
+                image: './assets/angel.png'
             }
         ];
 
