Make truth or dare prompts more general

--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
             <a href="./index.html">Home Page</a>
             <a href="./aboutsergio.html">Quién es Sergio?</a>
             <a href="./aboutteam.html">Equipo cumple</a>
-            <a href="./ruletaretos.html">Ruleta de la suerte!</a>
+            <a href="./ruleta.html">Ruleta de la suerte!</a>
             <a href="./tinder.html">Juega al Tinder!</a>
+            <a href="./verdad.html">Verdad o atrevimiento</a>
         </div>
     </div>
 
@@ -137,7 +138,7 @@
                 <span style="font-size: 20px; color: #aa151b; font-weight: bold;">Tinder</span>
             </div>
         </a>
-        <a href="#" style="text-decoration: none;">
+        <a href="./verdad.html" style="text-decoration: none;">
             <div style="background: #fff; border-radius: 30px; box-shadow: 0 4px 16px rgba(0,0,0,0.15); padding: 30px; display: flex; flex-direction: column; align-items: center;">
                 <img src="./assets/verdadlogo.png" alt="Verdad o atrevimiento" style="width: 100px; height: 100px; border-radius: 20px; margin-bottom: 15px;">
                 <span style="font-size: 20px; color: #aa151b; font-weight: bold;">Verdad o atrevimiento</span>
