--- a/ruleta.html
+++ b/ruleta.html
@@ -116,8 +116,9 @@
             <a href="./index.html">Home Page</a>
             <a href="./aboutsergio.html">Quién es Sergio?</a>
             <a href="./aboutteam.html">Equipo cumple</a>
-            <a href="./ruletaretos.html">Ruleta de la suerte!</a>
+            <a href="./ruleta.html">Ruleta de la suerte!</a>
             <a href="./tinder.html">Juega al Tinder!</a>
+            <a href="./verdad.html">Verdad o atrevimiento</a>
         </div>
     </div>
 
