--- a/tinder.html
+++ b/tinder.html
@@ -287,7 +287,7 @@
         <nav class="menu">
             <a href="./index.html">Home</a>
             <a href="./ruleta.html">Ruleta</a>
-            <a href="#" aria-disabled="true" style="opacity:0.4; cursor:default;">Más pronto...</a>
+            <a href="./verdad.html">Verdad o atrevimiento</a>
         </nav>
     </header>
     <main>
