Add karaoke game page

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <a href="./ruleta.html">Ruleta de la suerte!</a>
             <a href="./tinder.html">Juega al Tinder!</a>
             <a href="./verdad.html">Verdad o atrevimiento</a>
+            <a href="./karaoke.html">Karaoke español</a>
         </div>
     </div>
 
@@ -144,7 +145,7 @@
                 <span style="font-size: 20px; color: #aa151b; font-weight: bold;">Verdad o atrevimiento</span>
             </div>
         </a>
-        <a href="#" style="text-decoration: none;">
+        <a href="./karaoke.html" style="text-decoration: none;">
             <div style="background: #fff; border-radius: 30px; box-shadow: 0 4px 16px rgba(0,0,0,0.15); padding: 30px; display: flex; flex-direction: column; align-items: center;">
                 <img src="./assets/karaokelogo.png" alt="Karaoke" style="width: 100px; height: 100px; border-radius: 20px; margin-bottom: 15px;">
                 <span style="font-size: 20px; color: #aa151b; font-weight: bold;">Karaoke</span>
