--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             </div>
         </a>
 
-        <a href="#" style="text-decoration: none;">
+        <a href="./verdad.html" style="text-decoration: none;">
             <div style="background: #fff; border-radius: 30px; box-shadow: 0 4px 16px rgba(0,0,0,0.15); padding: 30px; display: flex; flex-direction: column; align-items: center;">
                 <img src="./assets/verdadlogo.png" alt="Verdad o atrevimiento" style="width: 100px; height: 100px; border-radius: 20px; margin-bottom: 15px;">
                 <span style="font-size: 20px; color: #aa151b; font-weight: bold;">Verdad o atrevimiento</span>
             </div>
         </a>
 
-        <a href="#" style="text-decoration: none;">
+        <a href="./karaoke.html" style="text-decoration: none;">
             <div style="background: #fff; border-radius: 30px; box-shadow: 0 4px 16px rgba(0,0,0,0.15); padding: 30px; display: flex; flex-direction: column; align-items: center;">
                 <img src="./assets/karaokelogo.png" alt="Karaoke" style="width: 100px; height: 100px; border-radius: 20px; margin-bottom: 15px;">
                 <span style="font-size: 20px; color: #aa151b; font-weight: bold;">Karaoke</span>
