updates to bumble with Pau's descriptions

--- a/tinder.html
+++ b/tinder.html
@@ -548,8 +548,8 @@
             {
                 name: 'Pau',
                 age: 31,
-                location: 'Madrid · 5 km',
-                job: 'Especialista en marketing digital y chef amateur',
+                location: 'Lausanne, Suiza · 1451 km',
+                job: 'Especialista en marketing digital. Master en Comercio y Bebercio',
                 bio: 'Cocino paellas brutales. Me apunto a cualquier plan con playa o terrazas.',
                 passions: ['Triatlón', 'Fotografía analógica', 'Viajes improvisados', 'Aperitivos eternos'],
                 anthem: 'Tú me dejaste de querer - C. Tangana',
@@ -558,8 +558,8 @@
             {
                 name: 'Sergio',
                 age: 32,
-                location: 'Madrid · 1 km',
-                job: 'Product manager y cumpleañero oficial',
+                location: 'Zurich, Suiza · 1665 km',
+                job: 'Product manager, chef amateur y cumpleañero oficial',
                 bio: 'Organizo fiestas como si fueran releases. Me encanta bailar reggaetón noventero y tengo playlist para cada momento.',
                 passions: ['Brunch con amigos', 'Pistas de esquí', 'Vinilos clásicos', 'Maratones de series'],
                 anthem: 'As it was - Harry Styles',
@@ -567,9 +567,9 @@
             },
             {
                 name: 'Adrián',
-                age: 31,
-                location: 'Madrid · 6 km',
-                job: 'Arquitecto de experiencias inmersivas',
+                age: 30,
+                location: 'Madrid · 0.9 km',
+                job: 'Emprendedor y arquitecto de experiencias inmersivas',
                 bio: 'De día diseño espacios, de noche mezclo cócteles. Siempre tengo un plan cultural y uno clandestino.',
                 passions: ['Arte urbano', 'Realidad virtual', 'Rutas en moto', 'Cine de autor'],
                 anthem: 'Midnight City - M83',
@@ -578,7 +578,7 @@
             {
                 name: 'Pablo',
                 age: 29,
-                location: 'Madrid · 2 km',
+                location: 'Madrid · 0.4 km',
                 job: 'Chef creativo y storyteller gastronómico',
                 bio: 'Si no estás bailando mientras cocino, algo estamos haciendo mal. Premio a la mejor tortilla en 2023 (según mi abuela).',
                 passions: ['Salsa', 'Mercados callejeros', 'Vinilos funk', 'Catas secretas'],
@@ -588,8 +588,8 @@
             {
                 name: 'Dani',
                 age: 31,
-                location: 'Madrid · 4 km',
-                job: 'Ingeniero de sonido en festivales',
+                location: 'Zurich, Suiza · 1667 km',
+                job: 'Triatleta por pasión, ingeniero mecánico por profesión.',
                 bio: 'Tengo un don para conseguir backstage y hacerte fan de bandas que aún no existen. Sí, llevo tapones en el bolsillo.',
                 passions: ['Festivales', 'Rutas de pintxos', 'Escalada', 'Sintetizadores'],
                 anthem: 'Blinding Lights - The Weeknd',
@@ -604,6 +604,16 @@
                 passions: ['Motos vintage', 'Cocina fusión', 'DJ amateur', 'Gin-tonics con historia'],
                 anthem: 'La vida moderna - Residente',
                 image: './assets/angel.png'
+            },
+            {
+                name: 'Andrés',
+                age: 32,
+                location: 'Zurich, Suiza · 1667 km',
+                job: 'Business Angel y yogui certificado: capital y calma en perfecta armonía.',
+                bio: 'Secreto amor por los tacos y gastronomia Mexicana.',
+                passions: ['Cocina fusión', 'DJ amateur', 'Gin-tonics con historia'],
+                anthem: 'El Mariachi',
+                image: './assets/andres.png'
             }
         ];
 
