changes to karaoke

--- a/karaoke.html
+++ b/karaoke.html
@@ -179,26 +179,26 @@
 
     <script>
         const songs = [
-            { title: "Paquito el Chocolatero", artist: "Grupo Santamaría", spotifyUrl: "https://open.spotify.com/search/Paquito%20el%20Chocolatero%20Grupo%20Santamar%C3%ADa" },
-            { title: "La Macarena", artist: "Los Del Río", spotifyUrl: "https://open.spotify.com/search/La%20Macarena%20Los%20Del%20R%C3%ADo" },
-            { title: "Aserejé (The Ketchup Song)", artist: "Las Ketchup", spotifyUrl: "https://open.spotify.com/search/Aserej%C3%A9%20Las%20Ketchup" },
-            { title: "El Baile de los Pajaritos", artist: "María Jesús y su Acordeón", spotifyUrl: "https://open.spotify.com/search/El%20Baile%20de%20los%20Pajaritos%20Mar%C3%ADa%20Jes%C3%BAs" },
-            { title: "La Barbacoa", artist: "Georgie Dann", spotifyUrl: "https://open.spotify.com/search/La%20Barbacoa%20Georgie%20Dann" },
-            { title: "El Chiringuito", artist: "Georgie Dann", spotifyUrl: "https://open.spotify.com/search/El%20Chiringuito%20Georgie%20Dann" },
-            { title: "La Yenka", artist: "Johnny & Charley", spotifyUrl: "https://open.spotify.com/search/La%20Yenka%20Johnny%20Charley" },
-            { title: "Un Rayo de Sol", artist: "Los Diablos", spotifyUrl: "https://open.spotify.com/search/Un%20Rayo%20de%20Sol%20Los%20Diablos" },
-            { title: "Eva María", artist: "Fórmula V", spotifyUrl: "https://open.spotify.com/search/Eva%20Mar%C3%ADa%20F%C3%B3rmula%20V" },
-            { title: "Vacaciones de Verano", artist: "Fórmula V", spotifyUrl: "https://open.spotify.com/search/Vacaciones%20de%20Verano%20F%C3%B3rmula%20V" },
-            { title: "Borriquito Como Tú", artist: "Peret", spotifyUrl: "https://open.spotify.com/search/Borriquito%20Como%20T%C3%BA%20Peret" },
-            { title: "El Tractor Amarillo", artist: "Zapato Veloz", spotifyUrl: "https://open.spotify.com/search/El%20Tractor%20Amarillo%20Zapato%20Veloz" },
-            { title: "La Ramona", artist: "Fernando Esteso", spotifyUrl: "https://open.spotify.com/search/La%20Ramona%20Fernando%20Esteso" },
-            { title: "Devuélveme a Mi Chica (Sufre Mamón)", artist: "Hombres G", spotifyUrl: "https://open.spotify.com/search/Devu%C3%A9lveme%20a%20Mi%20Chica%20Hombres%20G" },
-            { title: "Voy a Pasármelo Bien", artist: "Hombres G", spotifyUrl: "https://open.spotify.com/search/Voy%20a%20Pas%C3%A1rmelo%20Bien%20Hombres%20G" },
-            { title: "Sarandonga", artist: "Lola Flores", spotifyUrl: "https://open.spotify.com/search/Sarandonga%20Lola%20Flores" },
+            { title: "Despechá", artist: "Rosalía", spotifyUrl: "https://open.spotify.com/search/Despech%C3%A1%20Rosal%C3%ADa" },
+            { title: "La Morocha", artist: "Lali", spotifyUrl: "https://open.spotify.com/search/La%20Morocha%20Lali" },
+            { title: "Sarà perché ti amo", artist: "Ricchi e Poveri", spotifyUrl: "https://open.spotify.com/search/Sar%C3%A0%20Perch%C3%A9%20Ti%20Amo%20Ricchi%20e%20Poveri" },
+            { title: "Para hacer bien el amor hay que venir al Sur", artist: "Raffaella Carrà", spotifyUrl: "https://open.spotify.com/search/Para%20hacer%20bien%20el%20amor%20hay%20que%20venir%20al%20Sur%20Raffaella%20Carr%C3%A0" },
             { title: "Que Viva España", artist: "Manolo Escobar", spotifyUrl: "https://open.spotify.com/search/Que%20Viva%20Espa%C3%B1a%20Manolo%20Escobar" },
             { title: "El Porompompero", artist: "Manolo Escobar", spotifyUrl: "https://open.spotify.com/search/El%20Porompompero%20Manolo%20Escobar" },
             { title: "Yo Quiero Bailar", artist: "Sonia y Selena", spotifyUrl: "https://open.spotify.com/search/Yo%20Quiero%20Bailar%20Sonia%20y%20Selena" },
-            { title: "La Chica Ye-Yé", artist: "Concha Velasco", spotifyUrl: "https://open.spotify.com/search/La%20Chica%20Ye-Y%C3%A9%20Concha%20Velasco" }
+            { title: "Devuélveme a Mi Chica (Sufre Mamón)", artist: "Hombres G", spotifyUrl: "https://open.spotify.com/search/Devu%C3%A9lveme%20a%20Mi%20Chica%20Hombres%20G" },
+            { title: "La Chica Ye-Yé", artist: "Concha Velasco", spotifyUrl: "https://open.spotify.com/search/La%20Chica%20Ye-Y%C3%A9%20Concha%20Velasco" },
+            { title: "Un Rayo de Sol", artist: "Los Diablos", spotifyUrl: "https://open.spotify.com/search/Un%20Rayo%20de%20Sol%20Los%20Diablos" },
+            { title: "Eva María", artist: "Fórmula V", spotifyUrl: "https://open.spotify.com/search/Eva%20Mar%C3%ADa%20F%C3%B3rmula%20V" },
+            { title: "La Macarena", artist: "Los Del Río", spotifyUrl: "https://open.spotify.com/search/La%20Macarena%20Los%20Del%20R%C3%ADo" },
+            { title: "Aserejé (The Ketchup Song)", artist: "Las Ketchup", spotifyUrl: "https://open.spotify.com/search/Aserej%C3%A9%20Las%20Ketchup" },
+            { title: "La Barbacoa", artist: "Georgie Dann", spotifyUrl: "https://open.spotify.com/search/La%20Barbacoa%20Georgie%20Dann" },
+            { title: "El Chiringuito", artist: "Georgie Dann", spotifyUrl: "https://open.spotify.com/search/El%20Chiringuito%20Georgie%20Dann" },
+            { title: "Borriquito Como Tú", artist: "Peret", spotifyUrl: "https://open.spotify.com/search/Borriquito%20Como%20T%C3%BA%20Peret" },
+            { title: "El Tractor Amarillo", artist: "Zapato Veloz", spotifyUrl: "https://open.spotify.com/search/El%20Tractor%20Amarillo%20Zapato%20Veloz" },
+            { title: "La Ramona", artist: "Fernando Esteso", spotifyUrl: "https://open.spotify.com/search/La%20Ramona%20Fernando%20Esteso" },
+            { title: "Voy a Pasármelo Bien", artist: "Hombres G", spotifyUrl: "https://open.spotify.com/search/Voy%20a%20Pas%C3%A1rmelo%20Bien%20Hombres%20G" },
+            { title: "Sarandonga", artist: "Lola Flores", spotifyUrl: "https://open.spotify.com/search/Sarandonga%20Lola%20Flores" },
         ];
 
         const songList = document.getElementById('songList');
